enabled preview features for JavFX